--- a/web-static/styles/6-filters.css
+++ b/web-static/styles/6-filters.css
@@ -1,20 +1,22 @@
 .filters {
+  display: flex;
+  flex-direction: row;
   background-color: white;
   height: 70px;
   width: 100%;
   border: 1px solid #dddddd;
   border-radius: 4px;
+  position: relative;
 }
 .filters button {
+  position: absolute;
   font-size: 18px;
   background-color: #ff5a5f;
   color: #ffffff;
   height: 48px;
-
-  padding-right: 30px;
   margin: 10px 30px;
   width: 20%;
-  float: right;
+  right: 30px;
   border: none;
   border-radius: 4px;
 }
